--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Date: 2015-03-24
 Title: A Survey Monkey R Client
 Author: Thomas J. Leeper
 Maintainer: Thomas J. Leeper <thosjleeper@gmail.com>
+Contributor:  Kevin Little <klittle@iecodesign.com>
 Imports: RCurl, httr, jsonlite, plyr
 Description: Programmatic access to the Survey Monkey API <https://developer.surveymonkey.com/>, which currently provides extensive functionality for monitoring surveys and retrieving survey results and some functionality for creating new surveys and data collectors.
 License: GPL-2
