added Roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(smlogin)
 export(surveydetails)
 export(surveylist)
 export(surveypreview)
+export(surveyquestiondf)
 export(surveyquestions)
 export(userdetails)
